--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -1,5 +1,5 @@
 [program:tm2]
-command=/var/www/tuistudio/venv/bin/gunicorn -c deploy/gunicorn.conf tuistudio:app
+command=/var/www/tuistudio/venv/bin/gunicorn -c deploy/gunicorn.conf.py tuistudio:app
 directory=/var/www/tuistudio
 user=root
 autostart=true
