--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -1,4 +1,4 @@
-[program:tm2]
+[program:tuistudio]
 command=/var/www/tuistudio/venv/bin/gunicorn -c deploy/gunicorn.conf.py tuistudio:app
 directory=/var/www/tuistudio
 user=root
