--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -8,17 +8,23 @@ server {
     }
 }
 
-# Website
+# 自动跳转到www.tuistudio.com
+server {
+    listen       80;
+    server_name  tuistudio.com;
+    return       301 http://www.tuistudio.com$request_uri;
+}
+
 server {
     listen 80;
-    server_name tuistudio.com www.tuistudio.com;
+    server_name www.tuistudio.com;
 
     # 拦截静态文件，缓存2周
     # 将url去掉server_name，再与root拼接起来，即为文件的真实路径
     root /var/www/tuistudio/tuistudio;
-	location ~* .*\.(jpg|jpeg|gif|css|png|js|ico|xml)$ {
-		expires 15d;
-	}
+        location ~* .*\.(jpg|jpeg|gif|css|png|js|ico|xml)$ {
+                expires 15d;
+        }
 
     location / {
         proxy_pass       http://127.0.0.1:8888/;
