--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "font-awesome": "~4.1.0",
-    "respond": "~1.4.2"
+    "respond": "~1.4.2",
+    "fancyselect": "*"
   }
 }
