--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "bootstrap": "~3.2.0",
     "font-awesome": "~4.1.0",
     "respond": "~1.4.2",
-    "fancyselect": "*"
+    "fancyselect": "*",
+    "jquery.scrollTo": "~1.4.13"
   }
 }
